--- a/app/fonts.css
+++ b/app/fonts.css
@@ -1,32 +1,50 @@
 /* 
- * Apfel Grotezk Font Declaration
+ * WhenIWas Font Family
  * 
- * Note: You need to place the actual font files in the public/fonts directory:
- * - ApfelGrotezk-Regular.woff2
- * - ApfelGrotezk-Medium.woff2
- * - ApfelGrotezk-Bold.woff2
+ * Font weights available:
+ * - Light: 300
+ * - Regular: 400
+ * - Medium: 500
+ * - Bold: 700
+ * - Variable Font: 100-900
  */
 
 @font-face {
-  font-family: "Apfel Grotezk";
-  src: url("/fonts/ApfelGrotezk-Regular.woff2") format("woff2");
+  font-family: "WhenIWas";
+  src: url("/fonts/whenIwas-Light.woff") format("woff");
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "WhenIWas";
+  src: url("/fonts/whenIwas-Regular.woff") format("woff");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: "Apfel Grotezk";
-  src: url("/fonts/ApfelGrotezk-Medium.woff2") format("woff2");
+  font-family: "WhenIWas";
+  src: url("/fonts/whenIwas-Medium.woff") format("woff");
   font-weight: 500;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: "Apfel Grotezk";
-  src: url("/fonts/ApfelGrotezk-Bold.woff2") format("woff2");
+  font-family: "WhenIWas";
+  src: url("/fonts/whenIwas-Bold.woff") format("woff");
   font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "WhenIWas";
+  src: url("/fonts/whenIwas-VariableFont_wght.woff") format("woff");
+  font-weight: 100 900;
   font-style: normal;
   font-display: swap;
 }
